---- Breaking Changes ---- Added: Templating Added: Ability to add your own settings_name in config. Added: Additional 'note' attribute to sections to have a note appear at the top of the section Added: Additional 'description' attribute to fields Added: Separators between fields Updated: Positioning of save button and credit Updated: Default template to have the fields below the name as having the label next to the fields took up too much space Updated: Bootstrap Bugfix: Generation of settings_name was using namespacing as part of the generation, but this included full paths, so it made the names long. Settings name can now be configured manually, if you don't define this, then it falls back to plugin_name_settings. Fine for non published plugins, but you should include your company/name to prevent conflicts such as test_plugin_settings_polyplugins. Our example plugin will provide an Admin class that handles generation so you can just include that in all your plugins and not have to remove to rename it. Removed: Excess properties that were really only required for checking if Reusable Admin Panel was activated, but since this class is just included in all plugins, those properties are no longer needed. This makes instantiating the class shorting with less defining of properties. Removed: Reusable Admin Panel checks Reworked: Auto settings_name generation.

--- a/src/templates/default/style.css
+++ b/src/templates/default/style.css
@@ -1,3 +1,8 @@
+#wpbody-content {
+  padding-top: 10px;
+  padding-bottom: 35px;
+}
+
 /* Global Begin */
 table.form-table {
   margin-top: 20px;
@@ -103,13 +108,17 @@ input[type=checkbox]:focus, input[type=color]:focus, input[type=date]:focus, inp
 }
 
 .credit {
-  text-align: center;
+  text-align: right;
   margin: 0 5px;
 }
 
 .credit a {
-  color: var(--settings-primary, #46BEA4);
-  text-decoration: none;
+  color: var(--settings-primary, #46BEA4)!important;
+  text-decoration: none!important;
+}
+
+.credit a:hover {
+  text-decoration: underline!important;
 }
 
 input[type=checkbox]:checked {
@@ -212,9 +221,30 @@ input[type=checkbox]:checked::before {
 /* Options Begin */
 .options {
   background-color: var(--settings-bg, #fff);
+  padding: 0;
+}
+.options .options-padding {
   padding: 20px;
 }
 /* Options End */
+
+/* Notes Begin */
+.bootstrap-wrapper .note {
+  padding: 20px;
+}
+
+.bootstrap-wrapper .note.success {
+  background-color: #198754;
+}
+
+.bootstrap-wrapper .note.warning {
+  background-color: #FFC107;
+}
+
+.bootstrap-wrapper .note.error {
+  background-color: #DC3545;
+}
+/* Notes End */
 
 /* Fields Begin */
 .fields {
@@ -268,6 +298,7 @@ a.info {
 .bootstrap-wrapper label {
   font-size: 16px;
   display: block!important;
+  width: 100%!important;
 }
 
 .bootstrap-wrapper .field-container {
@@ -298,6 +329,16 @@ label.form-label {
 }
 
 /* Color Picker */
+button.button.wp-color-result.wp-picker-open {
+  width: unset !important;
+  display: block !important;
+  padding-right: 24px !important;
+}
+
+.wp-picker-input-wrap input {
+  margin-left: 0 !important;
+}
+
 span.wp-color-result-text {
   display: none;
 }
@@ -329,7 +370,12 @@ button.button.wp-color-result {
 }
 
 input#general-color-picker {
-  margin-left: 5px;
+  margin-bottom: 10px!important;
+  margin-left: 15px;
+}
+
+input.button.button-small.wp-picker-default {
+  margin-bottom: 5px!important;
 }
 
 /* Bootstrap Fix */
@@ -337,4 +383,8 @@ input#general-color-picker {
   -moz-box-sizing: content-box!important;
   -webkit-box-sizing: content-box!important;
   box-sizing: content-box!important;
+}
+
+#wpfooter {
+  display: none;
 }
